got the center cards displaying properly

--- a/index.html
+++ b/index.html
@@ -105,19 +105,117 @@
 					<a href="#"><button>Share</button></a>
 				</div>
 			</div>
+			<div class="title-line">
+				<p class="p1">Your Projects</p>
+				<p class="p2">Announcements</p>
+			</div>
 			<div class="card-container">
 				<div class="card card-1">
-					<span class="mdi mdi-star-remove-outline project-icon"></span>
-					<span class="mdi mdi-eye-plus-outline project-icon"></span>
-					<span
-						class="mdi mdi-share-variant-outline yshape project-icon"
-					></span>
+					<div class="card-main">
+						<span class="card-header">Super Cool Project <br /></span>
+						<span>
+							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores
+							iusto error doloremque cum esse laudantium praesentium ab autem?
+							Nesciunt, sit.
+						</span>
+					</div>
+					<div class="icon-row">
+						<span></span>
+						<span class="mdi mdi-star-remove-outline project-icon1"></span>
+						<span class="mdi mdi-eye-plus-outline project-icon2"></span>
+						<span
+							class="mdi mdi-share-variant-outline yshape project-icon3"
+						></span>
+					</div>
 				</div>
-				<div class="card card-2"></div>
-				<div class="card card-3"></div>
-				<div class="card card-4"></div>
-				<div class="card"></div>
-				<div class="card"></div>
+				<div class="card card-2">
+					<div class="card-main">
+						<span class="card-header">Less Cool Project <br /></span>
+						<span>
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+							optio temporibus accusamus, perspiciatis corrupti aliquam ea. Ex,
+							praesentium. Enim non nulla est amet numquam eos.
+						</span>
+					</div>
+					<div class="icon-row">
+						<span></span>
+						<span class="mdi mdi-star-remove-outline project-icon1"></span>
+						<span class="mdi mdi-eye-plus-outline project-icon2"></span>
+						<span
+							class="mdi mdi-share-variant-outline yshape project-icon3"
+						></span>
+					</div>
+				</div>
+				<div class="card card-3">
+					<div class="card-main">
+						<span class="card-header">Impossible App<br /></span>
+						<span>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ab
+							nihil porro officia.
+						</span>
+					</div>
+					<div class="icon-row">
+						<span></span>
+						<span class="mdi mdi-star-remove-outline project-icon1"></span>
+						<span class="mdi mdi-eye-plus-outline project-icon2"></span>
+						<span
+							class="mdi mdi-share-variant-outline yshape project-icon3"
+						></span>
+					</div>
+				</div>
+				<div class="card card-4">
+					<div class="card-main">
+						<span class="card-header">Easy Peasy App<br /></span>
+						<span>
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo
+							nobis qui ab tempora at, ducimus numquam eos dolor amet deleniti
+							voluptas mollitia, hic aliquid exercitationem!
+						</span>
+					</div>
+					<div class="icon-row">
+						<span></span>
+						<span class="mdi mdi-star-remove-outline project-icon1"></span>
+						<span class="mdi mdi-eye-plus-outline project-icon2"></span>
+						<span
+							class="mdi mdi-share-variant-outline yshape project-icon3"
+						></span>
+					</div>
+				</div>
+				<div class="card card-5">
+					<div class="card-main">
+						<span class="card-header">Ad Blocker<br /></span>
+						<span>
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non,
+							dignissimos suscipit ipsa accusantium necessitatibus quod!
+						</span>
+					</div>
+					<div class="icon-row">
+						<span></span>
+						<span class="mdi mdi-star-remove-outline project-icon1"></span>
+						<span class="mdi mdi-eye-plus-outline project-icon2"></span>
+						<span
+							class="mdi mdi-share-variant-outline yshape project-icon3"
+						></span>
+					</div>
+				</div>
+				<div class="card card-6">
+					<div class="card-main">
+						<span class="card-header">Money Maker<br /></span>
+						<span>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+							ratione debitis voluptates ea similique maiores voluptas facere
+							aut officiis dolores. Veritatis tempora architecto facere?.
+						</span>
+					</div>
+					<div class="icon-row">
+						<span></span>
+						<span class="mdi mdi-star-remove-outline project-icon1"></span>
+						<span class="mdi mdi-eye-plus-outline project-icon2"></span>
+						<span
+							class="mdi mdi-share-variant-outline yshape project-icon3"
+						></span>
+					</div>
+				</div>
 			</div>
 			<div class="right-bar">
 				<div class="announcements">
@@ -135,6 +233,3 @@
 		</div>
 	</body>
 </html>
-<a href="https://www.flaticon.com/free-icons/boy" title="boy icons"
-	>Boy icons created by Freepik - Flaticon</a
->
