complete layout of dashboard project

--- a/index.html
+++ b/index.html
@@ -219,15 +219,87 @@
 			</div>
 			<div class="right-bar">
 				<div class="announcements">
-					<div class="notice"></div>
-					<div class="notice"></div>
-					<div class="notice"></div>
+					<div class="notice bb">
+						<span class="notice-header">Site Maintenance</span><br />
+						<span class="notice-text"
+							>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+							Adipisci tempore quos omnis consequuntur vitae architecto
+							temporibus, saepe ea sit tenetur!</span
+						>
+					</div>
+					<div class="notice bb">
+						<span class="notice-header">Community Share Day</span><br />
+						<span class="notice-text"
+							>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+							Laudantium excepturi delectus, tenetur eius porro iusto nisi sit.
+							Consequatur?
+						</span>
+					</div>
+					<div class="notice">
+						<span class="notice-header">Updated Privacy Policy</span><br />
+						<span class="notice-text"
+							>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+							Asperiores molestiae labore corporis porro sapiente amet, culpa
+							ullam distinctio eveniet excepturi quisquam nemo!
+						</span>
+					</div>
+				</div>
+				<div class="trending-header">
+					<span>Trending</span>
 				</div>
 				<div class="trending">
-					<div class="profile"></div>
-					<div class="profile"></div>
-					<div class="profile"></div>
-					<div class="profile"></div>
+					<div class="profiles profile1">
+						<span></span>
+						<img
+							src="./icons/yellow.png"
+							alt="yellow avatar"
+							class="avatar"
+							height="30px"
+						/>
+						<div class="div">
+							<span class="tagline">@tegan<br /></span>
+							<span class="catchphrase">World Peace Builder</span>
+						</div>
+					</div>
+					<div class="profiles profile2">
+						<span></span>
+						<img
+							src="./icons/avatar (1).png"
+							alt="avatar"
+							class="avatar"
+							height="30px"
+						/>
+						<div>
+							<span class="tagline">@morgan<br /></span>
+							<span class="catchphrase">Super Cool Project</span>
+						</div>
+					</div>
+					<div class="profiles profile3">
+						<span></span>
+						<img
+							src="./icons/avatar (2).png"
+							alt="avatar"
+							class="avatar"
+							height="30px"
+						/>
+						<div class="div">
+							<span class="tagline">kendall<br /></span>
+							<span class="catchphrase">Life Changing App</span>
+						</div>
+					</div>
+					<div class="profiles profile4">
+						<span></span>
+						<img
+							src="./icons/avatar (3).png"
+							alt="avatar"
+							class="avatar"
+							height="30px"
+						/>
+						<div>
+							<span class="tagline">@alex<br /></span>
+							<span class="catchphrase">No Traffic Maker</span>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
