One tiny fix implemented

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 			</div>
 			<div class="right-bar">
 				<div class="announcements">
-					<div class="notice bb">
+					<div class="notice bdr-btm">
 						<span class="notice-header">Site Maintenance</span><br />
 						<span class="notice-text"
 							>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -227,7 +227,7 @@
 							temporibus, saepe ea sit tenetur!</span
 						>
 					</div>
-					<div class="notice bb">
+					<div class="notice bdr-btm">
 						<span class="notice-header">Community Share Day</span><br />
 						<span class="notice-text"
 							>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
